More work on LiveView, made a test UI

--- a/EosClr/EosClr/EosClr.vcxproj
+++ b/EosClr/EosClr/EosClr.vcxproj
@@ -57,7 +57,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>EDSDK.lib;</AdditionalDependencies>
+      <AdditionalDependencies>EDSDK.lib;user32.lib;Ole32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
