--- a/EosClr/EosClr/EosClr.vcxproj.filters
+++ b/EosClr/EosClr/EosClr.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="IsoManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ExposureTime.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ExposureTimeManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -78,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IsoManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExposureTimeManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
