--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,6 @@ ModelManifest.xml
 /EosClr/EosClr.sdf
 /EosClr/EosClr.v12.suo
 /EosClr/EosClr.opensdf
+/EosClr/EosClr/lib/EDSDKTypes.h
+/EosClr/EosClr/lib/EDSDK.h
+/EosClr/EosClr/lib/EDSDKErrors.h
