--- a/EosClr/TestUI/TestUI.csproj
+++ b/EosClr/TestUI/TestUI.csproj
@@ -146,6 +146,10 @@
       <Link>Mlib.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\EosClr\lib\turbojpeg.dll">
+      <Link>turbojpeg.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="..\EosClr\lib\Ucs32P.dll">
       <Link>Ucs32P.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
